--- a/angelist/index.html
+++ b/angelist/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
   </head>
-  <body class="" style="background-color: #2a4a4d;">
+  <body class="" style="background-color: #0a1f21;">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
